--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="Pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crash</title>
+    <link   rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <div id="img principal">
-        <img src="IMG\Crash_Bandicoot_Logo.png" alt="">
+    <div id="titulo">
+        <h1 class="animate__animated animate__fadeOutRight animate__delay-3s">Hello World</h1>
     </div>
-    <main>
-        <div id="conteudo">
-            <div id="menu">
-                <ul>
-                    <li>CONTINUE</li>
-                    <li>OPTIONS</li>
-                    <li>NEW GAME</li>
-                    <li>PLAY GAME</li>
-                </ul>
-            </div>
-            <div id="jogos">
-                <img src="IMG\gam2.png" alt="">
-                <img src="IMG\game3.png" alt="">
-            </div>
+    <main id="Games">
+        <li id="Crash1">
+            <img src="IMG\Crash_Bandicoot_Logo.png" alt="">
+                <p>CONINTUE</p> 
+                <p>NEW GAME</p>
+                <p>OPTIONS</p>
+
+        </li>
+        <li id="Crash2">
+            <img src="IMG\gam2.png" alt="">
+            <p>CONINTUE</p>
+            <p>NEW GAME</p>
+            <p>OPTIONS</p>
+        </li>
+        <li id="Crash3">
+            <img src="IMG\game3.png" alt="">
+            <p>CONINTUE</p>
+            <p>NEW GAME</p>
+            <p>OPTIONS</p>
+        </li>
         </div>
     </main>
 </body>
+
 </html>
