--- a/index.html
+++ b/index.html
@@ -5,37 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crash</title>
-    <link   rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div id="titulo">
-        <h1 class="animate__animated animate__fadeOutRight animate__delay-3s">Hello World</h1>
-    </div>
     <main id="Games">
         <li id="Crash1">
             <img src="IMG\Crash_Bandicoot_Logo.png" alt="">
-                <p>CONINTUE</p> 
-                <p>NEW GAME</p>
-                <p>OPTIONS</p>
-
+            <p>CONTINUE</p>
+            <p>OPTIONS</p>
+            <p>NEW GAME</p>
         </li>
         <li id="Crash2">
             <img src="IMG\gam2.png" alt="">
-            <p>CONINTUE</p>
-            <p>NEW GAME</p>
+            <p>CONTINUE</p>
             <p>OPTIONS</p>
+            <p>NEW GAME</p>
         </li>
         <li id="Crash3">
             <img src="IMG\game3.png" alt="">
-            <p>CONINTUE</p>
-            <p>NEW GAME</p>
+            <p>CONTINUE</p>
             <p>OPTIONS</p>
+            <p>NEW GAME</p>
         </li>
+        <div>
+            <p>SELECT</p>
+            <p>BACK</p>
+            <p>LICENSE</p>
+            <p>CREDITS</p>
         </div>
     </main>
 </body>
 
 </html>
+
